--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Image Gallery</title>
   <base href="https://github.com/bimanneha/imageGallery/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Access-Control-Allow-Origin" content="Origin">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.bad2cb06f879a3ca1d00.css"></head>
 <body>
