--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Image Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <base href="https://bimanneha.github.io/imageGallery/">
+  <base href="https://bimanneha.github.io/imageGallery/home">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.bad2cb06f879a3ca1d00.css"></head>
 <body>
